--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
 
 
   <div class="container" id="Backpack">
+    <h3>Backpack</h3>
     <div class="card-deck">
       <div class="card">
         <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
