--- a/index.html
+++ b/index.html
@@ -36,10 +36,6 @@
           </nav>
     </div>
 
-
-
-
-
     <div class="container">
         <div id="carouselExampleControls" class="carousel slide orange-bg" data-ride="carousel">
             <div class="carousel-inner">
@@ -48,7 +44,7 @@
                     <div class="col-md-7">
                         <h1>Mega LCD TV For Sports</h1>
                         <p>This is the best x-box in the world for people who just want to waste time in front of fake sports.</p>
-                        <h1 class="price">$420</h1>
+                        <h1 class="price">$1200</h1>
                         <button class="buy-now-button">But Now</button>
                     </div>
                     <div class="col-md-5">
@@ -61,7 +57,7 @@
                     <div class="col-md-7">
                         <h1>Cool Dude Headphone</h1>
                         <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
-                        <h1 class="price">$1200</h1>
+                        <h1 class="price">$420</h1>
                         <button class="buy-now-button">But Now</button>
                     </div>
                     <div class="col-md-5">
@@ -94,9 +90,6 @@
           </div>
     </div>
 
-
-
-
     <div class="container categories">
         <div class="row">
           <div class="col-md-4">
@@ -126,7 +119,7 @@
         <div class="card">
           <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">Supply 350</h5>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             <h5>$120</h5>
             <button class="buy-now-button">But Now >></button>
@@ -135,7 +128,7 @@
         <div class="card">
           <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">Nike 360</h5>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             <h5>$320</h5>
             <button class="buy-now-button">But Now >></button>
@@ -144,7 +137,7 @@
         <div class="card">
           <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">Red Airmax</h5>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             <h5>$350</h5>
             <button class="buy-now-button">But Now >></button>
@@ -152,7 +145,6 @@
         </div>
       </div>
     </div>
-
 
   <div class="container" id="Backpack">
     <h3>Backpack</h3>
@@ -204,7 +196,6 @@
     <footer>
        <small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small>
     </footer>
-
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
